After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697041 - NetworkManager 0.9.8.0 fails to build with GCC-4.8.0 and/or GLib-2.36.0
NetworkManager 0.9.8.0 fails to build with GCC-4.8.0 and/or GLib-2.36.0
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
0.9.8
Other Linux
: Normal major
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-01 13:12 UTC by Armin K.
Modified: 2013-04-08 13:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Armin K. 2013-04-01 13:12:43 UTC
make[4]: Entering directory `/home/armin/src/NetworkManager-0.9.8.0/src/dns-manager'
  CC     libdns_manager_la-nm-dns-manager.lo
nm-dns-manager.c: In function 'compute_hash':
nm-dns-manager.c:564:28: error: argument to 'sizeof' in 'memset' call is the same expression as the destination; did you mean to provide an explicit length? [-Werror=sizeof-pointer-memaccess]
  memset (buffer, 0, sizeof (buffer));
                            ^
cc1: all warnings being treated as errors
make[4]: *** [libdns_manager_la-nm-dns-manager.lo] Error 1
Comment 1 Dan Winship 2013-04-02 20:20:59 UTC
fixed in git
Comment 2 Armin K. 2013-04-03 19:54:51 UTC
make[9]: Entering directory `/home/armin/src/NetworkManager-0.9.8.0/src/settings/plugins/keyfile/tests'
  CC     test_keyfile-test-keyfile.o
In file included from test-keyfile.c:44:0:
test-keyfile.c: In function ‘test_read_string_ssid’:
test-keyfile.c:1196:53: error: argument to ‘sizeof’ in ‘memcmp’ call is the same expression as the second source; did you mean to provide an explicit length? [-Werror=sizeof-pointer-memaccess]
  ASSERT (memcmp (array->data, expected_ssid, sizeof (expected_ssid)) == 0,
                                                     ^
../../../../../include/nm-test-helpers.h:43:8: note: in definition of macro ‘ASSERT’
  if (!(x)) { \
        ^
cc1: all warnings being treated as errors
make[9]: *** [test_keyfile-test-keyfile.o] Error 1
make[9]: Leaving directory `/home/armin/src/NetworkManager-0.9.8.0/src/settings/plugins/keyfile/tests'



Now I get this. Also, can you please add the last fix to 0.9.8 branch?
Comment 3 Dan Winship 2013-04-08 13:13:33 UTC
dcbw fixed the second bug and pulled both fixes to nm-0-9-8